# ARR_May_2026

./: .gitignore  README.md  pyproject.toml  run.sh  run_api.sh
scripts/: results_summarisation.py  run_gemma.py  run_llama.bash  run_llama4_eval.py  run_llava.bash  run_llava_onevision.py  run_openai.py  run_qwen.py
src/main_eval/: const.py
src/main_eval/dataset/: build_all.py  loader.py  prompt_builder.py  transform.py
src/main_eval/evaluation/: recovery.py  runner.py  writer.py
src/main_eval/models/: base.py  const.py  gemma.py  llama4.py  llava_onevision.py  openai.py  qwen.py
src/model_load_test/: llama4.py  llava_onevision.py  ministral3.py
