[tool.poetry]
name = "main_eval"
version = "0.1.0"
description = "main virtual env for most of the work"
authors = ["Lee Somyo <lee.sangmyeong.lo3@is.naist.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
torch = {version = "^2.5.1+cu121", source = "torch_cu121"}
torchvision = {version = "^0.20.1+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.5.1+cu121", source = "torch_cu121"}
transformers = "^4.51.0"
wandb = "^0.18.7"
lightning = "^2.4.0"
nvidia-htop = "^1.2.0"
openai = "^1.70.0"
pandas = "^2.2.3"
accelerate = "^1.2.1"
sentencepiece = "^0.2.0"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
tiktoken = "^0.9.0"
faiss-cpu = "^1.10.0"
torchao = "^0.10.0"
bitsandbytes = "^0.45.5"
open-clip-torch = "^2.32.0"
bert-score = "^0.3.13"
scikit-learn = "^1.6.1"
penman = "^1.3.1"
qwen-vl-utils = "^0.0.14"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
